--- a/GBTAngular1/src/app/components/payment-options/payment-options.component.html
+++ b/GBTAngular1/src/app/components/payment-options/payment-options.component.html
@@ -160,6 +160,56 @@
     <!-- Step 2: Select Class and Seat Number -->
     <div *ngIf="currentStep === 2">
       <h2>Step 2: Select Class and Seat Number</h2>
+      <div class = "row space-between">
+        <div class="card col-sm-5 border">
+          <div class="card-body">
+            <h5 class="card-title">Departure ticket</h5>
+          </div>
+          <ul class="list-group list-group-light list-group-small">
+            <li class="list-group-item px-4">Odlazak: {{this.selectedDestinations.start}}</li>
+            <li class="list-group-item px-4">Datum: {{selectedDepartureDate}}</li>
+          </ul>
+          <div class="card-body">
+            <div class="form-check">
+              <input
+                mdbCheckbox
+                class="form-check-input"
+                type="checkbox"
+                value="obrok"
+                id="flexCheckDefault"
+              />
+              <label class="form-check-label" for="flexCheckDefault">
+                Obrok
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class = "col-sm-2"></div>
+        <div *ngIf = "isOneWay==false" class="card col-sm-5 border">
+          <div class="card-body">
+            <h5 class="card-title">Return ticket</h5>
+          </div>
+          <ul class="list-group list-group-light list-group-small">
+            <li class="list-group-item px-4">Dolazak: {{this.selectedDestinations.end}}</li>
+            <li class="list-group-item px-4">Datum: {{selectedDepartureDate}}</li>
+          </ul>
+          <div class="card-body">
+            <div class="form-check">
+              <input
+                mdbCheckbox
+                class="form-check-input"
+                type="checkbox"
+                value="obrok"
+                id="flexCheckDefault"
+              />
+              <label class="form-check-label" for="flexCheckDefault">
+                Obrok
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <!-- Place your form controls for class and seat selection here -->
       <button class="btn btn-primary" (click)="nextStep()" [disabled]="!isClassAndSeatSelected()">Next</button>
     </div>
@@ -179,13 +229,29 @@
       
   
         <div class="form-check">
-          <input class="form-check-input" type="radio" id="card" name="paymentMethod" value="card" [(ngModel)]="selectedPaymentMethod">
+          <input class="form-check-input" type="radio" id="card" (change)="toggleMeal()" name="paymentMethod" value="card" [(ngModel)]="selectedPaymentMethod">
           <label class="form-check-label" for="card">
             <i class="fas fa-credit-card"></i>
             Plaćanje karticom
           </label>
         </div>
       </div>
+
+      <form *ngIf="isChecked == true">
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Ime prezime</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="JohnDoe">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Broj kartice</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="XXX">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Datum</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="XXX">
+        </div>
+      </form>
+
       <button class="btn btn-primary" (click)="nextStep()" [disabled]="!isPaymentOptionSelected()">Next</button>
     </div>
 
