--- a/GBTAngular1/src/app/components/home-page/home-page.component.html
+++ b/GBTAngular1/src/app/components/home-page/home-page.component.html
@@ -14,7 +14,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/live-tracking">Live tracking</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link" href="/ticket-overview">
+          <i class="fas fa-ticket-alt"></i> Tickets
+        </a>
+      </li>
     </ul>
     <div class="col-2">
       <!-- <select class="custom-select" (change)="changeLang($event.target.value)">
@@ -41,8 +45,8 @@
             
             <h2>Book a train ticket now</h2>
            
-            <a (click)="navigateToTicketBooking()" class="btn btn-outline-light btn-lg m-2" target="_blank"
-            role="button">Book a ticket</a>
+            <a href="/payment-options" class="btn btn-outline-light btn-lg m-2" target="_blank"
+            role="nofollow">Book a ticket</a>
       
             <!-- <button >Book a ticket</button> -->
           </div>
